2002-11-29  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/InetAddress/InetAddressTest.java: Make
	toString() test less strict, only check that it contains host address.

2002-11-29  John Leuner  <jewel@debian.org>

	* gnu/testlet/java/lang/reflect/Method/toString.java: 
	added extra test for method with multi-dimensional array in argument

2002-11-29  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/DataOutputStream/writeUTF.java: New test.

2002-11-29  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/File/canWrite.java: New test.

2002-11-29  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/File/list.java: New test.
	* gnu/testlet/java/io/File/newFile.java: New test.

2002-11-24  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/ByteArrayOutputStream/write.java: complete 
	method tests for class

2002-11-24  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/ByteArrayOutputStream: created directory for adding
	complete method tests for class

2002-11-24  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/PipedStream/Test.java: Added available() to
	complete method tests for PipedInputStream

2002-11-23  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/PipedReaderWriter/PipedTestWriter.java: Added flush() to
	complete method tests for PipedWriter

2002-11-23  Daryl Lee <dol@sources.redhat.com>
	* gnu/testlet/java/io/PipedReaderWriter/Test.java: Added close() to
	complete method tests for PipedReader

2002-11-23  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLClassLoader/getResourceBase.java: New base
	class to make gcj native code linking happy.
	* gnu/testlet/java/net/URLClassLoader/getResource.java: extend Base.
	* gnu/testlet/java/net/URLClassLoader/getResourceRemote.java: Likewise.

2002-11-22  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/URLClassLoader/getResourceRemote.java: New test.
	* gnu/testlet/java/net/URLClassLoader/getResource.java: Make reusable.
